--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
