--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
